{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 10,
  "lineage": "0ae2267f-e7fe-88a0-fb93-2a5001bba7e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:route-table/rtb-0968039809d601cd0",
            "id": "rtb-0968039809d601cd0",
            "owner_id": "927461092174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ea94d6110f8f6fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-Private-NEWBIE"
            },
            "tags_all": {
              "Name": "rt-Private-NEWBIE"
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pri-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:route-table/rtb-0e6d8c842b6333b80",
            "id": "rtb-0e6d8c842b6333b80",
            "owner_id": "927461092174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ea94d6110f8f6fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-DB-NEWBIE"
            },
            "tags_all": {
              "Name": "rt-DB-NEWBIE"
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:route-table/rtb-0f17826e644a17874",
            "id": "rtb-0f17826e644a17874",
            "owner_id": "927461092174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050960ccfccee8d83",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-Public-NEWBIE"
            },
            "tags_all": {
              "Name": "rt-Public-NEWBIE"
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri-db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:subnet/subnet-0ec4447c317e76592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.128/27",
            "id": "subnet-0ec4447c317e76592",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927461092174",
            "tags": {
              "Name": "sn-DB-NEWBIE-a"
            },
            "tags_all": {
              "Name": "sn-DB-NEWBIE-a"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri-db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:subnet/subnet-0c2873a5292f33dd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.0.160/27",
            "id": "subnet-0c2873a5292f33dd8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927461092174",
            "tags": {
              "Name": "sn-DB-NEWBIE-c"
            },
            "tags_all": {
              "Name": "sn-DB-NEWBIE-c"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:subnet/subnet-0147d19ef3c28f2e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.64/27",
            "id": "subnet-0147d19ef3c28f2e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927461092174",
            "tags": {
              "Name": "sn-Private-NEWBIE-a"
            },
            "tags_all": {
              "Name": "sn-Private-NEWBIE-a"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:subnet/subnet-0ec2d38737a40d5a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.0.96/27",
            "id": "subnet-0ec2d38737a40d5a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927461092174",
            "tags": {
              "Name": "sn-Private-NEWBIE-c"
            },
            "tags_all": {
              "Name": "sn-Private-NEWBIE-c"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:subnet/subnet-02eecd2aeef9cbd3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/27",
            "id": "subnet-02eecd2aeef9cbd3a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927461092174",
            "tags": {
              "Name": "sn-Public-NEWBIE-a"
            },
            "tags_all": {
              "Name": "sn-Public-NEWBIE-a"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:subnet/subnet-0235cade466431f58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.0.32/27",
            "id": "subnet-0235cade466431f58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927461092174",
            "tags": {
              "Name": "sn-Public-NEWBIE-c"
            },
            "tags_all": {
              "Name": "sn-Public-NEWBIE-c"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08fa7b0f936a784a7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:927461092174:vpc/vpc-08fa7b0f936a784a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0d8309d1b646def28",
            "default_route_table_id": "rtb-0076e6a0d86aa2742",
            "default_security_group_id": "sg-060ea8a4b4471f73e",
            "dhcp_options_id": "dopt-cebdc5a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08fa7b0f936a784a7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0076e6a0d86aa2742",
            "owner_id": "927461092174",
            "tags": {
              "Name": "vpc-NEWBIE"
            },
            "tags_all": {
              "Name": "vpc-NEWBIE"
            }
          }
        }
      ]
    }
  ]
}